Updates components & added result component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-figure-one></app-figure-one>
 <app-form></app-form>
 <app-figure-two></app-figure-two>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
