--- a/src/app/figure-two/figure-two.component.html
+++ b/src/app/figure-two/figure-two.component.html
@@ -1,3 +1,3 @@
 <div class="figure-half bottom-half">
-    <img src="../stockimgs/stock_city.png" alt="Вид города 2">
+    <img src="assets/stockimgs/stock_city.png" alt="Вид города 2">
 </div>
