Added fake json data
Added HttpClient for REST API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-headernav></app-headernav>
 <app-figure-one></app-figure-one>
 <app-form></app-form>
+<app-result></app-result>
 <app-figure-two></app-figure-two>
 <app-footer></app-footer>
