--- a/src/app/result/result.component.scss
+++ b/src/app/result/result.component.scss
@@ -1,19 +1,66 @@
-.city-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 16px;
+.eventcard-selector {
+  max-width: 700px;
+  margin: 40px auto;
+  padding: 30px;
+  background: linear-gradient(135deg, #a8e6cf, #56ab2f);
+  border-radius: 6px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  font-family: 'Segoe UI', sans-serif;
+  color: #ffffff;
 }
-  
-.city-table th, .city-table td {
-    border: 1px solid #ccc;
-    padding: 8px 12px;
-    text-align: left;
+
+.eventcard-selector select {
+  width: 100%;
+  padding: 7px;
+  margin-top: 2px;
+  border: 1px solid #a8e6cf;
+  border-radius: 5px;
+  font-size: 14px;
 }
-  
-.city-table th {
-    background-color: #f0f0f0;
+
+.eventadditive-container {
+  max-width: 700px;
+  margin: 40px auto;
+  padding: 25px;
+  background: linear-gradient(100deg, #dfea5d, #c73636);
+  border-radius: 10px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  font-family: 'Segoe UI', sans-serif;
+  color: #ffffff;
 }
-  
-.city-table tbody tr:nth-child(even) {
-    background-color: #fafafa;
+
+.eventadditive-container input {
+  width: 100%;
+  padding: 10px;
+  margin-top: 5px;
+  border: 1px solid #c4e53f;
+  border-radius: 6px;
+  font-size: 16px;
+  transition: border-color 0.2s;
+}
+
+.eventadditive-container button {
+  margin-top: 15px;
+  padding: 10px 20px;
+  background: #e7ea3d;
+  color: maroon;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 15px;
+  transition: background 0.3s;
+}
+.eventadditive-container button:hover {
+  background: #dcba2f;
+}
+
+.event-card {
+  max-width: 800px;
+  margin: 30px auto;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+  font-family: 'Segoe UI', sans-serif;
+  background: #fafafa;
 }
